# src/controllers/user.js
@@ -36,7 +36,11 @@ module.exports = {
                 in: 'body',
                 required: true,
                 schema: {
-                   $ref:"#/definitions/User"
+                    "username": "test",
+                    "password": "1234",
+                    "email": "test@site.com",
+                    "firstName": "test",
+                    "lastName": "test"
                 }
             }
         */
@@ -66,8 +70,12 @@ module.exports = {
             #swagger.parameters['body'] = {
                 in: 'body',
                 required: true,
-               schema: {
-                   $ref:"#/definitions/User"
+                schema: {
+                    "username": "test",
+                    "password": "1234",
+                    "email": "test@site.com",
+                    "firstName": "test",
+                    "lastName": "test"
                 }
             }
         */
